--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,6 @@ script:
   - >
     if [ "$PUBLISH_BINARY" == true ]; then
       npm install -g prebuild
-      npm run prebuild -- -t 6.14.4 -t 8.12.0 -t 9.11.2 -t 10.16.1 -t 11.15.0 -t 12.7.0 -r node --arch=$ARCH --upload $prebuild_upload
-      npm run prebuild -- -t 2.0.0 -t 3.0.0 -t 4.0.4 -t 5.0.0 -t 6.0.0 -r electron --arch=$ARCH --upload $prebuild_upload
+      npm run prebuild -- -t 11.15.0 -t 12.7.0 -t 13.0.0 -r node --arch=$ARCH --upload $prebuild_upload
+      npm run prebuild -- -t 5.0.0 -t 6.0.0 -t 7.0.0 -t 8.0.0 -r electron --arch=$ARCH --upload $prebuild_upload
     fi
