--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ os:
 - osx
 - windows
 
-dist: trusty
-
 addons:
   apt:
     packages:
@@ -45,6 +43,6 @@ script:
   - >
     if [ "$PUBLISH_BINARY" == true ]; then
       npm install -g prebuild
-      npm run prebuild -- -t 11.15.0 -t 12.7.0 -t 13.0.0 -r node --arch=$ARCH --upload $prebuild_upload
-      npm run prebuild -- -t 5.0.0 -t 6.0.0 -t 7.0.0 -t 8.0.0 -r electron --arch=$ARCH --upload $prebuild_upload
+      npm run prebuild -- -t 11.15.0 -t 12.7.0 -t 13.0.0 -t 14.0.0 -r node --arch=$ARCH --upload $prebuild_upload
+      npm run prebuild -- -t 8.0.0 -t 9.0.0 -t 10.0.0 -t 11.0.0-beta.1 -r electron --arch=$ARCH --upload $prebuild_upload
     fi
